# Deep-Learning-2024

./: .gitignore  pyproject.toml
Meilenstein2/deep_learning/: __main__.py  dnn_test.py  generate_labels.py  m1_multi_task_exp1.1.py  m1_multi_task_exp2.py  m1_single_task.py  predict.py  testmodel.py  train copy.py  train.py
Meilenstein2/helper/: labels_filt.py  predict.py  restructure.py  test_split.py
Meilenstein3/: avg_mae.py  build_train_gan_dataset.py  dataset_visualization.py  determine_bad_images.py  even_out_dataset.py  generate_labels.py  interpolate_snapshots.py  m1_multi_task_exp3_only_gans.py  m1_multi_task_exp3_with_gans.py  mae_diff.py  mae_dist.py  morph_data.py  train.py  visualize_fid.py  visualize_stylegan_fid.py
Meilenstein3/FID_Metrik/: metric-fid50k_full_all.jsonl  metrics_fid.txt
Meilenstein3/classificator_gan_non_gan/: classificator_gan_non_gan.py  prediction.py  train.py
Meilenstein3/helper/: resize.py
Meilenstein3/stylegan3/: =11.2.0
Meilenstein4/: pyproject.toml  rescale_realesrgan.py
Meilenstein4/livedemo/: .gitignore
Meilenstein4/livedemo/backend/: database_new.json  database_old.json  pyproject.toml
Meilenstein4/livedemo/backend/backend/: api.py  ml.py
Meilenstein4/meilenstein4/: __main__.py  dataloading.py  dataloading_contrastive.py  dataloading_triplet.py  keras_contrastive.py  keras_impl.py  keras_triplet.py  paddata.py  train.py  (+5 more)
deep_learning/: __main__.py  m1_multi_task.py  m1_multi_task_exp1.2.py  m1_multi_task_exp2.py  m1_multi_task_exp3.py  m1_single_task.py  train.py
helper/: resize.py  test_split.py
(+118 files in other folders)
